RESOLVED FIXED75101
AX: WebKit should ignore ARIA role=presentation on focusable elements
https://bugs.webkit.org/show_bug.cgi?id=75101
Summary AX: WebKit should ignore ARIA role=presentation on focusable elements
chris fleizach
Reported 2011-12-22 11:22:53 PST
WebKit should ignore ARIA role=presentation on focusable elements From: http://www.w3.org/TR/wai-aria/complete#presentation If an element with a role of presentation is focusable, user agents MUST ignore the normal effect of the role and expose the element with implicit native semantics, in order to ensure that the element is both understandable and operable.
Attachments
Test case (1.17 KB, text/html)
2011-12-22 11:28 PST, chris fleizach
no flags
patch (5.41 KB, patch)
2011-12-22 11:31 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-12-22 11:28:08 PST
Created attachment 120348 [details] Test case
chris fleizach
Comment 2 2011-12-22 11:28:33 PST
From the test case, we should also make sure that images are not hidden if focusable regardless of their alt attributes or size
chris fleizach
Comment 3 2011-12-22 11:29:01 PST
chris fleizach
Comment 4 2011-12-22 11:31:35 PST
chris fleizach
Comment 5 2011-12-22 14:30:59 PST
Note You need to log in before you can comment on or make changes to this bug.