AX: WebKit should ignore ARIA role=presentation on focusable elements https://bugs.webkit.org/show_bug.cgi?id=75101

Reviewed by Darin Adler.

Source/WebCore:

If an element is focusable, the presentational role must be ignored, lest the user not be able
to interact with something important.

Test: accessibility/presentational-elements-with-focus.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
(WebCore::AccessibilityRenderObject::determineAriaRoleAttribute):
(WebCore::AccessibilityRenderObject::inheritsPresentationalRole):

LayoutTests:

* accessibility/presentational-elements-with-focus-expected.txt: Added.
* accessibility/presentational-elements-with-focus.html: Added.



Canonical link: https://commits.webkit.org/91891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103580 268f45cc-cd09-0410-ab3c-d52691b4dbfc